--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,10 @@
     "expo-status-bar": "~1.3.0",
     "moment": "^2.29.4",
     "react-native": "~0.68.2",
+    "react-native-draggable-flatlist": "^3.1.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-global-props": "^1.1.5",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-redux": "^8.0.2",
@@ -67,6 +70,8 @@
     }
   },
   "lint-staged": {
-    "*.{ts,tsx}": "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
   }
 }
