--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -51,6 +51,7 @@
     "dot-notation": "off",
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "import/no-extraneous-dependencies": "off"
+    "import/no-extraneous-dependencies": "off",
+    "react/jsx-no-useless-fragment": "off"
   }
 }
