--- a/app/package.json
+++ b/app/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
+    "react-native-toast-message": "^2.1.5",
     "react-redux": "^8.0.2",
     "typescript": "^4.7.4"
   },
